# github-ai-agent-workflow

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  lint.yml  test.yml
agents/: README.md
agents/core/: api-agent.md  database-agent.md  devops-agent.md  documentation-agent.md  performance-agent.md  planner-agent.md  security-agent.md  test-case-agent.md  validation-agent.md
agents/orchestrator/: conflict-resolution.md  execution-order.md  quality-gates.md  routing-rules.md
agents/shared/: coding-standards.md  docker-guidelines.md  engineering-principles.md  fastapi-guidelines.md  performance-guidelines.md  postgres-guidelines.md  security-guidelines.md  testing-guidelines.md
alembic/: env.py
alembic/versions/: 20260504_01_create_todos_table.py  20260504_02_add_todo_is_active.py  20260504_03_create_users_table.py  20260504_04_add_todo_owner.py
app/: main.py
app/api/: dependencies.py  docs.py  router.py
app/api/v1/: auth.py  tasks.py  todos.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/db/: base.py  session.py
app/models/: todo.py  user.py
app/repositories/: todo.py  user.py
app/schemas/: auth.py  common.py  todo.py
app/services/: auth.py  todo.py
tests/: conftest.py  test_auth_api.py  test_todo_api.py
